--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1962,6 +1962,12 @@
 		"parent": "packages"
 	},
 	{
+		"title": "@wordpress/ts-config",
+		"slug": "packages-ts-config",
+		"markdown_source": "../packages/ts-config/README.md",
+		"parent": "packages"
+	},
+	{
 		"title": "@wordpress/undo-manager",
 		"slug": "packages-undo-manager",
 		"markdown_source": "../packages/undo-manager/README.md",
