--- a/packages/url/tsconfig.json
+++ b/packages/url/tsconfig.json
@@ -1,4 +1,4 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig.json",
-	"extends": "../../tsconfig.base.json"
+	"extends": "@wordpress/ts-config/tsconfig.base.json"
 }
