--- a/packages/block-editor/tsconfig.json
+++ b/packages/block-editor/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig.json",
-	"extends": "../../tsconfig.base.json",
+	"extends": "@wordpress/ts-config/tsconfig.base.json",
 	"references": [
 		{ "path": "../a11y" },
 		{ "path": "../api-fetch" },
