--- a/packages/api-fetch/tsconfig.json
+++ b/packages/api-fetch/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig.json",
-	"extends": "../../tsconfig.base.json",
+	"extends": "@wordpress/ts-config/tsconfig.base.json",
 	"references": [ { "path": "../i18n" }, { "path": "../url" } ],
 	"exclude": [ "**/test" ]
 }
